components/build-suite-test-component-image-url-vtzp/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: test-app-hnoc
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: build-suite-test-component-image-url-vtzp
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elbuild-suite-test-component-image-url-vtzp
  namespace: e2e-test-rkaw
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-build-suite-test-component-image-url-vtzp
    weight: null
status: {}
